--- a/Troncoso.Elias.Parcial/Troncoso.Elias.Parcial/Troncoso.Elias.Parcial.csproj
+++ b/Troncoso.Elias.Parcial/Troncoso.Elias.Parcial/Troncoso.Elias.Parcial.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Control.Draggable, Version=1.0.5049.269, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Control.Draggable.1.0.5049.269\lib\net35-Client\Control.Draggable.dll</HintPath>
+    </Reference>
     <Reference Include="FontAwesome.Sharp, Version=5.14.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.5.14.1\lib\net472\FontAwesome.Sharp.dll</HintPath>
     </Reference>
@@ -74,6 +77,12 @@
     <Compile Include="frm_Compras.Designer.cs">
       <DependentUpon>frm_Compras.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_Listados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Listados.Designer.cs">
+      <DependentUpon>frm_Listados.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_Stock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Compras.resx">
       <DependentUpon>frm_Compras.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Listados.resx">
+      <DependentUpon>frm_Listados.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Stock.resx">
       <DependentUpon>frm_Stock.cs</DependentUpon>
